--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "animate.css": "^3.7.2",
-    "antd": "^3.26.15",
+    "antd": "^4.1.1",
     "axios": "^0.19.2",
     "copy-to-clipboard": "^3.3.1",
     "file-saver": "^2.0.2",
@@ -25,6 +27,8 @@
     "js-base64": "^2.5.2",
     "js-sha256": "^0.9.0",
     "json2csv": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "minter-js-sdk": "^0.31.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
