--- a/react-app/package.json
+++ b/react-app/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^4.13.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
     "react-router-dom": "^5.1.2",
