--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.0.1",
     "animate.css": "^3.7.2",
     "antd": "^4.1.1",
     "axios": "^0.19.2",
@@ -42,6 +43,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "sha.js": "^2.4.11",
+    "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
     "use-debounce": "^3.4.1"
   },
