--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/fingerprintjs2": "^2.0.0",
     "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/jsonwebtoken": "^8.3.9",
