--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,50 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.0.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@ant-design/icons": "^4.2.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.6",
     "@types/fingerprintjs2": "^2.0.0",
-    "@types/history": "^4.7.5",
-    "@types/jest": "^24.0.0",
-    "@types/jsonwebtoken": "^8.3.9",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.14",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/styled-components": "^5.0.1",
-    "animate.css": "^3.7.2",
-    "antd": "^4.1.1",
-    "axios": "^0.19.2",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.3",
+    "animate.css": "^4.1.1",
+    "antd": "^4.6.6",
+    "axios": "^0.20.0",
     "copy-to-clipboard": "^3.3.1",
     "file-saver": "^2.0.2",
-    "fingerprintjs2": "^2.1.0",
+    "fingerprintjs2": "^2.1.2",
     "history": "^4.10.1",
-    "i18next": "^19.3.4",
-    "i18next-browser-languagedetector": "^4.0.2",
-    "js-base64": "^2.5.2",
+    "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "js-base64": "^3.5.2",
     "js-sha256": "^0.9.0",
-    "json2csv": "^5.0.0",
+    "json2csv": "^5.0.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "minter-js-sdk": "^0.31.0",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
-    "mobx-react-lite": "^1.5.2",
+    "minter-js-sdk": "^0.35.0",
+    "mobx": "^5.15.7",
+    "mobx-react": "^6.3.0",
+    "mobx-react-lite": "^2.2.2",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-i18next": "^11.3.4",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-i18next": "^11.7.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
     "sha.js": "^2.4.11",
-    "styled-components": "^5.1.0",
-    "typescript": "~3.7.2",
-    "use-debounce": "^3.4.1"
+    "styled-components": "^5.2.0",
+    "typescript": "~4.0.3",
+    "use-debounce": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -68,5 +68,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@rescripts/cli": "0.0.14",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^1.6.2"
   }
 }
