--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
