--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
+    "watch-node": "nodemon --inspect dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "build": "tsc",
     "watch-ts": "tsc -w",
@@ -26,6 +26,7 @@
     "@types/multer": "^1.4.2",
     "@types/node-cron": "^2.0.3",
     "@types/node-persist": "^3.0.0",
+    "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^7.0.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -37,7 +38,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
     "form-data": "^3.0.0",
-    "google-spreadsheet": "^3.0.9",
+    "google-spreadsheet": "^3.0.13",
     "helmet": "^3.21.3",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
@@ -50,6 +51,8 @@
     "node-cron": "^2.0.3",
     "node-persist": "^3.0.5",
     "nodemailer": "^6.4.5",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "short-uuid": "^3.1.1",
@@ -71,7 +74,7 @@
     "@types/express": "^4.17.3",
     "@types/express-flash": "0.0.2",
     "@types/express-session": "^1.17.0",
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^25.2.3",
     "@types/jquery": "^3.3.33",
     "@types/lodash": "^4.14.149",
     "@types/lusca": "^1.6.1",
@@ -94,12 +97,12 @@
     "chai": "^4.2.0",
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
-    "jest": "^25.1.0",
-    "node-sass": "^4.13.1",
+    "jest": "^25.5.4",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "shelljs": "^0.8.3",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^25.5.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
