--- a/react-app/package.json
+++ b/react-app/package.json
@@ -43,6 +43,7 @@
     "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-telegram-login": "^1.1.2",
     "sha.js": "^2.4.11",
     "styled-components": "^5.2.0",
     "typescript": "~4.0.3",
